// Original file: proto/smesher_types.proto

import type { SimpleInt as _spacemesh_v1_SimpleInt, SimpleInt__Output as _spacemesh_v1_SimpleInt__Output } from '../../spacemesh/v1/SimpleInt';

export interface MinGasResponse {
  'mingas'?: (_spacemesh_v1_SimpleInt | null);
}

export interface MinGasResponse__Output {
  'mingas': (_spacemesh_v1_SimpleInt__Output | null);
}
