// Original file: proto/smesher_types.proto

import type { SimpleInt as _spacemesh_v1_SimpleInt, SimpleInt__Output as _spacemesh_v1_SimpleInt__Output } from '../../spacemesh/v1/SimpleInt';

export interface SetMinGasRequest {
  'mingas'?: (_spacemesh_v1_SimpleInt | null);
}

export interface SetMinGasRequest__Output {
  'mingas': (_spacemesh_v1_SimpleInt__Output | null);
}
